Fix cell stats visibility

--- a/src/app/khiops-library/components/cell-stats/cell-stats.component.scss
+++ b/src/app/khiops-library/components/cell-stats/cell-stats.component.scss
@@ -5,6 +5,7 @@
 	overflow-x: auto;
 	overflow-y: hidden;
 	white-space: nowrap;
+	display: block !important;
 	font-size: 0.8rem;
 	b {
 		font-weight: 500;
